# PlantArchitect

./: .gitmodules  CMakeLists.txt  README.md
Resources/Parameters/: Acacia.gtparams  Birch.gtparams  Cabbage.gtparams  Corkscrew.gtparams  Down.gtparams  Elm.gtparams  Hazel.gtparams  Maple.gtparams  Oak.gtparams  Oak2.gtparams  Oak3.gtparams  Pine.gtparams  Tulip.gtparams  Unknown.gtparams  Unknown2.gtparams  Unknown3.gtparams  Up.gtparams  Walnut.gtparams  Willow.gtparams  acacia.treeparam  balanced.treeparam  birch.treeparam  default.treeparam  imbalanced.treeparam  maple.treeparam  oak.treeparam  pine.treeparam  scan1.treeparam  test.treeparam  ugly.treeparam
Resources/Parameters/Unknown/: Acacia.gtparams  Down.gtparams  Willow.gtparams
Resources/Shaders/Fragment/: Background.frag  InternodeRendering.frag  MaskPreprocess.frag  SemanticBranch.frag
Resources/Shaders/Vertex/: InternodeRendering.vert
Resources/Sorghum/: skeleton_procedural_1.txt  skeleton_procedural_2.txt  skeleton_procedural_3.txt  skeleton_procedural_4.txt
Resources/btfs/alu/: all_PDF2Dcolours.txt  all_PDF2Dindices.txt  all_PDF2Dslices.txt  all_PDF4Dslices.txt  alu_PDF6Dslices.txt  alu_materialInfo.txt  binary.btf  logfile.txt  testfile.test
Resources/btfs/ceilingHDR/: all_PDF1Dslice.txt  all_PDF2Dcolours.txt  all_PDF2Dindices.txt  all_PDF2Dslices.txt  all_PDF3Dscale.txt  all_PDF3Dslices.txt  all_PDF4Dscale.txt  all_PDF4Dslices.txt  all_colors.txt  all_indexAB.txt  all_materialInfo.txt  binary.btf  ceilingHDR_PDF6Dscale.txt  ceilingHDR_PDF6Dslices.txt  ceilingHDR_materialInfo.txt  quantreport.txt  testfile.test  usedparfile.par
Resources/btfs/corduroy/: all_PDF1Dslice.txt  all_PDF2Dindices.txt  all_PDF3Dslices.txt  all_PDF4Dscale.txt  all_colors.txt  corduroy_PDF6Dscale.txt  corduroy_materialInfo.txt  logfile.txt  quantreport.txt  usedparfile.par
Resources/btfs/fabric01/: all_PDF1Dslice.txt  all_PDF2Dindices.txt  all_PDF2Dslices.txt  all_PDF3Dscale.txt  all_PDF3Dslices.txt  all_PDF4Dslices.txt  all_colors.txt  all_indexAB.txt  all_materialInfo.txt  binary.btf  fabric01_PDF6Dscale.txt  fabric01_materialInfo.txt  quantreport.txt  testfile.test
Resources/btfs/floortileHDR/: all_PDF1Dslice.txt  all_PDF2Dcolours.txt  all_PDF2Dindices.txt  all_PDF3Dscale.txt  all_PDF3Dslices.txt  all_PDF4Dscale.txt  all_PDF4Dslices.txt  all_colors.txt  all_indexAB.txt  all_materialInfo.txt  floortileHDR_PDF6Dscale.txt  floortileHDR_PDF6Dslices.txt  floortileHDR_materialInfo.txt  quantreport.txt  testfile.test  usedparfile.par
Resources/btfs/impalla/: all_PDF1Dslice.txt  all_PDF2Dindices.txt  all_PDF4Dscale.txt  all_colors.txt  all_indexAB.txt  all_materialInfo.txt  impalla_PDF6Dslices.txt  testfile.test  usedparfile.par
Resources/btfs/pinktileHDR/: all_PDF1Dslice.txt  all_PDF2Dcolours.txt  all_PDF2Dindices.txt  all_PDF2Dscale.txt  all_PDF2Dslices.txt  all_PDF3Dscale.txt  all_PDF3Dslices.txt  all_PDF4Dscale.txt  all_PDF4Dslices.txt  all_colors.txt  all_indexAB.txt  all_materialInfo.txt  binary.btf  pinktileHDR_PDF6Dscale.txt  pinktileHDR_PDF6Dslices.txt  pinktileHDR_materialInfo.txt  quantreport.txt  testfile.test  usedparfile.par
Resources/btfs/proposte/: all_PDF1Dslice.txt  all_PDF2Dindices.txt  all_PDF3Dscale.txt  all_PDF4Dscale.txt  all_materialInfo.txt  binary.btf  proposte_PDF6Dscale.txt  proposte_materialInfo.txt  testfile.test  usedparfile.par
Resources/btfs/pulli/: all_PDF3Dslices.txt  all_PDF4Dscale.txt  all_indexAB.txt  pulli_PDF6Dscale.txt  (+2 more)
include/PlantArchitect/: Branch.hpp  Camera2DVectorField.hpp  CubeVolume.hpp  DataComponents.hpp  DepthCamera.hpp  FBM.hpp  FBMField.hpp  GeneralTreeParameters.hpp  IPlantBehaviour.hpp  IPlantDescriptor.hpp  Internode.hpp  InternodeDataComponents.hpp  InternodeFoliage.hpp  InternodeLayer.hpp  InternodeManager.hpp  InternodeRingSegment.hpp  InternodeSystem.hpp  ObjectRotator.hpp  PlantArchitect-pch.hpp  PlantDataComponents.hpp  PlantLayer.hpp  PlantSystem.hpp  RadialBoundingVolume.hpp  Root.hpp  TreeData.hpp  TreeGraph.hpp  TreeLeaves.hpp  TreeParameters.hpp  TreeSystem.hpp  Volume.hpp  VoxelGrid.hpp  VoxelSpace.hpp  rapidxml.hpp  rapidxml_print.hpp
include/RayTracerFacility/: CUDABuffer.hpp  CUDAModule.hpp  DisneyBssrdf.hpp  LinearCongruenceGenerator.hpp  MaterialType.hpp  Optix7.hpp  RayDataDefinations.hpp  RayTracedRenderer.hpp  RayTracer.hpp  RayTracerManager.hpp  RayTracerUtilities.cuh  SkinnedRayTracedRenderer.hpp  Vertex.hpp
include/Scripts/: AutoTreeGenerationPipeline.hpp  GANTreePipelineDriver.hpp  GeneralTreeToLString.hpp  LSystemStringToImages.hpp  MultipleAngleCapture.hpp  SpaceColonizationTreeToLString.hpp  TreeDataCapturePipeline.hpp
src/PlantArchitect/: Branch.cpp  Camera2DVectorField.cpp  CubeVolume.cpp  Curve.cpp  CylinderVolume.cpp  DataComponents.cpp  DefaultInternodeBehaviour.cpp  DefaultInternodeFoliage.cpp  DefaultInternodePhyllotaxis.cpp  DefaultInternodeResource.cpp  DepthCamera.cpp  EmptyInternodePhyllotaxis.cpp  EmptyInternodeResource.cpp  FBM.cpp  FBMField.cpp  GeneralTreeBehaviour.cpp  GeneralTreeParameters.cpp  IInternodeBehaviour.cpp  IInternodeFoliage.cpp  IInternodePhyllotaxis.cpp  IInternodeResource.cpp  IPlantBehaviour.cpp  IPlantDescriptor.cpp  IVolume.cpp  Internode.cpp  InternodeBehaviour.cpp  InternodeDataComponents.cpp  InternodeFoliage.cpp  InternodeLayer.cpp  InternodeManager.cpp  InternodeModelDataComponents.cpp  InternodePlant.cpp  InternodeRingSegment.cpp  InternodeSystem.cpp  JSONTreeBehaviour.cpp  LSystemBehaviour.cpp  LeafSegment.cpp  MeshVolume.cpp  ObjectRotator.cpp  PlantDataComponents.cpp  (+27 more)
src/RayTracerFacility/: CUDABuffer.cpp  CUDAModule.cpp  RayTracedRenderer.cpp  RayTracer.cu  RayTracerManager.cpp  SkinnedRayTracedRenderer.cpp
src/Scripts/: AutoTreeGenerationPipeline.cpp  GANTreePipelineDriver.cpp  GeneralTreeToLString.cpp  LSystemStringToImages.cpp  MultipleAngleCapture.cpp  SpaceColonizationTreeToLString.cpp  TreeDataCapturePipeline.cpp
src/app/: Application.cpp  GANTree.cpp  InternodeBehavioursExample.cpp  PlantArchitect.cpp  SpaceColonizationExample.cpp  TreeDataCapturePipeline.cpp  imgui.ini
(+180 files in other folders)
